# FFmpegLib

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/github/xch168/ffmpeglib/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/github/xch168/ffmpeglib/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/github/xch168/ffmpeglib/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
